# auto-softlink

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  pyproject.toml
auto-softlink/: main.py
